--- a/wwr/styles/site_plan_rafting.css
+++ b/wwr/styles/site_plan_rafting.css
@@ -12,8 +12,8 @@ Fonts are separated by a & */
   --accent3-color: #264653;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "roboto";
-  --paragraph-font: "source-san-pro";
+  --heading-font: "Roboto";
+  --paragraph-font: "Source Sans Pro";
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #E76F51;  /* headlines on a white background */ 
